--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm install -g pa11y-ci
 
       - name: Kjør tilgjengelighetstester
-        run: pa11y-ci
+        run: pa11y-ci --no-sandbox
