--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-name: Accessibility Test
-
 on:
   push:
     branches:
@@ -14,8 +12,13 @@ jobs:
       - name: Sjekker ut repoet
         uses: actions/checkout@v4
 
+      - name: Installer Chromium
+        run: sudo apt-get update && sudo apt-get install -y chromium-browser
+
       - name: Installer Pa11y CI
         run: npm install -g pa11y-ci
 
       - name: Kjør tilgjengelighetstester
-        run: pa11y-ci --no-sandbox
+        run: pa11y-ci
+        env:
+          PUPPETEER_EXECUTABLE_PATH: /usr/bin/chromium-browser
